Fix teaser spacings when in regions without overlap.

--- a/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-region.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-region.scss
@@ -170,6 +170,14 @@ html[vs-region-loading="true"] { opacity: 0; }
   }
 }
 
+.vs-region[data-vs-region-overlap="none"] {
+  &[data-vs-region-curved="0"] {
+    .vs-region-self-padded.vs-introduction__container-wrapper {
+      padding-top: 80px;
+    }
+  }
+}
+
 // Fix IE 10-11 curve rendering
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .vs-region__bg {
